# mcp-trading

./: .env.example  .gitignore  README.md  app.py  market.py  mcp_params.py  pyproject.toml  reset.py  traders.py  trading_floor.py  util.py
